Replace deprecated method use